test_regress/t/t_class_param.out
%Error-UNSUPPORTED: t/t_class_param.v:18:30: Unsupported: class parameters
   18 |    localparam P = PMINUS1 + 1;
      |                              ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
